[gd_scene load_steps=6 format=3 uid="uid://b7j8e74syt0br"]

[ext_resource type="Script" path="res://Scenes/MainMenu/Scripts/MainMenu.gd" id="1_ref1v"]
[ext_resource type="Texture2D" uid="uid://chme6c0ld0txm" path="res://Scenes/MainMenu/Assets/8b09b52dd64e74a2dd9a788a5d908794.jpg" id="2_i0lmp"]
[ext_resource type="Theme" uid="uid://bug47d73a6l83" path="res://Scenes/MainMenu/Assets/Themes/MainMenu.tres" id="2_ocj14"]
[ext_resource type="FontFile" uid="uid://caegfgiquyuqy" path="res://Scenes/MainMenu/Assets/Fonts/DotGothic16-Regular.ttf" id="4_2blwq"]
[ext_resource type="Texture2D" uid="uid://c4ro2sp6aqj0i" path="res://Scenes/MainMenu/Assets/Clocking out logo.png" id="5_kffvu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ref1v")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -970.0
offset_top = -553.0
offset_right = 970.0
offset_bottom = 548.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0235294, 0.0235294, 1)

[node name="Sprite2D" type="Sprite2D" parent="BG"]
position = Vector2(1059, 549)
scale = Vector2(2.18209, 2.18209)
texture = ExtResource("2_i0lmp")

[node name="MarginContainer" type="MarginContainer" parent="BG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = 358.5
offset_right = 579.0
offset_bottom = 444.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BG/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BG/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="BG/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ocj14")
text = "Play"

[node name="Seperator" type="Label" parent="BG/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
text = "                   "

[node name="Options" type="Button" parent="BG/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ocj14")
text = "Options"

[node name="Seperator2" type="Label" parent="BG/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
text = "                   "

[node name="Credits" type="Button" parent="BG/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ocj14")
text = "Credits"

[node name="Seperator3" type="Label" parent="BG/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
text = "                   "

[node name="Quit" type="Button" parent="BG/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ocj14")
text = "Quit"

[node name="TitleText" type="RichTextLabel" parent="."]
visible = false
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -888.0
offset_top = -44.0
offset_right = -320.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("4_2blwq")
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]Clocking Out[/center]"

[node name="ClockingOutLogo" type="Sprite2D" parent="."]
position = Vector2(-640, -4)
scale = Vector2(0.312037, 0.312037)
texture = ExtResource("5_kffvu")

[connection signal="pressed" from="BG/MarginContainer/VBoxContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="BG/MarginContainer/VBoxContainer/HBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="BG/MarginContainer/VBoxContainer/HBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="BG/MarginContainer/VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
